force-app/main/default/objects/Community_Asset__c/Community_Asset__c.object-meta.xml
<CustomObject>
    <label>Community Asset</label>
    <nameField>
        <label>Asset</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>