force-app/main/default/objects/Community_Asset__c/fields/Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>Asset_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>