force-app/main/default/objects/Community_Asset__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Assets</relationshipLabel>
    <relationshipName>Community_Assets_del</relationshipName>
    <type>Lookup</type>
</CustomField>