force-app/main/default/objects/Community_Asset__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Community Assets</relationshipLabel>
    <relationshipName>Community_Assets_del</relationshipName>
    <type>Lookup</type>
</CustomField>