force-app/main/default/objects/Community_Asset__c/validationRules/Asset_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Name)  ||  Name = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The asset name is a required field</errorMessage>
</ValidationRule>