force-app/main/default/objects/Community_Asset__c/validationRules/Asset_Owner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Owner_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Asset_Owner__c)  ||  Asset_Owner__c = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Asset_Owner__c</errorDisplayField>
    <errorMessage>The Asset Owner is required</errorMessage>
</ValidationRule>