force-app/main/default/objects/Community_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>Asset_Owner__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Category__c</columns>
    <columns>Client__c</columns>
    <columns>Link__c</columns>
    <columns>Parent_Record_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Related_Record__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>