force-app/main/default/objects/Community_Asset__c/listViews/Andy_s_Assets.listView-meta.xml
<ListView>
    <fullName>Andy_s_Assets</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Asset_Owner__c</columns>
    <columns>Category__c</columns>
    <columns>Client__c</columns>
    <columns>Link__c</columns>
    <columns>Order__c</columns>
    <columns>Parent_Record_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Related_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Allen</value>
    </filters>
    <label>Andy&apos;s Assets</label>
    <language>en_US</language>
</ListView>