force-app/main/default/objects/Community_Asset__c/listViews/Assets_with_Projects.listView-meta.xml
<ListView>
    <fullName>Assets_with_Projects</fullName>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Asset_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Assets with Projects</label>
    <language>en_US</language>
</ListView>