force-app/main/default/objects/Community_Asset__c/listViews/Molly_s_Assets.listView-meta.xml
<ListView>
    <fullName>Molly_s_Assets</fullName>
    <columns>NAME</columns>
    <columns>Link__c</columns>
    <columns>Order__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Asset_Owner__c</columns>
    <columns>Category__c</columns>
    <columns>Client__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Record_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Related_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_Record__c</field>
        <operation>equals</operation>
        <value>0F91E000000TdPHSA0</value>
    </filters>
    <label>Molly&apos;s Assets</label>
    <language>en_US</language>
</ListView>